@@ -1,0 +1,13 @@
+package org.apache.solr.common.params;
+
+
+/**
+ * Parameters used with the QueryElevationComponent
+ *
+ **/
+public interface QueryElevationParams {
+
+  String ENABLE = "enableElevation";
+  String EXCLUSIVE = "exclusive";
+  String FORCE_ELEVATION = "forceElevation";
+}
