@@ -144,6 +144,8 @@ New Features
   Caverphone algorithm. (rmuir)
 
 * SOLR-1974: Add LimitTokenCountFilterFactory. (koji)
+
+* SOLR-1966: QueryElevationComponent can now return just the included results in the elevation file (gsingers, yonik)
    
 Optimizations
 ----------------------
